[workspace]
resolver = "3"
members = ["ken", "kenc", "kenspan", "kenvm"]

[profile.release]
debug = 2

[profile.release.package.kenvm]
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
enum_glob_use = { level = "deny", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
