[package]
name = "kenvm"
version = "0.1.0"
edition = "2024"

[dependencies]
kenspan = { path = "../kenspan" }
thiserror = "2.0.12"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
enum_glob_use = { level = "deny", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"

# false positive
option_if_let_else = "allow"
